# antimatter

./: .gitignore  DOCUMENTATION_FIXES_SUMMARY.md  README.md  ROADMAP.md  TESTING.md  mkdocs.yml  test_ws.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/ci-logs/: DASHBOARD.md  workflow_logs.csv
.github/workflows/: adapters-ci.yml  android-ci.yml  codeql.yml  core-ci.yml  extension-ci.yml  ios-ci.yml  publish-pypi.yml  record-workflow-status.yml
adapters/: CHANGELOG.md
adapters/ag/: README.md  package-lock.json  package.json
adapters/ag/src/: extension.ts
adapters/ag/src/core/network/: GatewayClient.ts  types.ts
adapters/ag/src/feature/chat/: BrainWatcher.ts  ChatCommandHandler.ts  HistoryManager.ts
adapters/ag/src/feature/files/: FileCommandHandler.ts
adapters/ag2/: README.md  proxy_agentapi.sh  pyproject.toml
adapters/ag2/antimatter_ag2/: agent_bridge.py  cli.py  server.py
adapters/ag2/antimatter_ag2/assets/: plugin.json
adapters/ag2/antimatter_ag2/assets/skills/antimatter-ag2/: SKILL.md
adapters/ag2/antimatter_bridge/: agent_bridge.py  server.py
adapters/ag2/tests/: test_cli.py  test_imports.py
adapters/cc/: package.json
android/: .gitignore  CHANGELOG.md  README.md  gradle.properties
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/java/dev/saifmukhtar/antimatter/navigation/: AntimatterNavigation.kt
android/app/src/main/java/dev/saifmukhtar/antimatter/utils/: LocalCrashHandler.kt
android/core/data/src/main/java/dev/saifmukhtar/antimatter/core/data/: AppDao.kt
android/core/network/src/main/java/dev/saifmukhtar/antimatter/core/network/: BridgeMessage.kt  BridgeService.kt
android/feature/chat/src/main/java/dev/saifmukhtar/antimatter/feature/chat/: ChatViewModel.kt
android/feature/files/src/main/java/dev/saifmukhtar/antimatter/feature/files/: FilesScreen.kt
android/feature/terminal/src/main/java/dev/saifmukhtar/antimatter/feature/terminal/: TerminalScreen.kt  TerminalViewModel.kt
core/: CHANGELOG.md  build_gateway.py  pyproject.toml
core/gateway/: README.md  pyproject.toml
core/gateway/src/antimatter_gateway/: pty_manager.py  qr.py  router.py  server.py
core/npm-wrapper/: package.json
core/shared-config/: pyproject.toml
core/shared-config/src/antimatter_shared_config/: config.py  secure_store.py
core/shared-crypto/: README.md  pyproject.toml
core/shared-crypto/src/antimatter_crypto/: e2ee.py
core/shared-fs/: pyproject.toml
core/shared-fs/src/antimatter_fs/: tree.py
core/shared-protocol/: pyproject.toml
docs/: ANDROID.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  EXTENSION.md  FEATURES.md  INSTALLATION.md  PROTOCOL.md  ROADMAP.md  SECURITY.md  TROUBLESHOOTING.md  ZERO_TRUST.md  index.md  package-lock.json  package.json
docs/stylesheets/: extra.css
extension/: .gitignore  .vscodeignore  README.md  build.mjs  package-lock.json  package.json  tsconfig.json
extension/src/: extension.ts
extension/src/core/data/: FileSystemHelper.ts
extension/src/core/network/: BridgeWebSocketServer.ts  MessageRouter.ts  types.ts
extension/src/core/state/: ChatStateManager.ts
extension/src/feature/chat/: BrainWatcher.ts  ChatCommandHandler.ts  HistoryManager.ts
extension/src/feature/connect/: AuthHandler.ts  CloudflareTunnel.ts  ConnectionManager.ts  QrWebviewProvider.ts
extension/src/feature/files/: FileCommandHandler.ts
extension/src/feature/terminal/: TerminalCommandHandler.ts
ios/: AntimatterApp.swift  AppCoordinator.swift  CHANGELOG.md
plugin/: pyproject.toml
plugin/antimatter_bridge/: agent_bridge.py  auth.py  server.py
plugin/antimatter_bridge/assets/: config.json.example
