[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "antimatter-bridge"
version = "1.0.0"
description = "Antimatter Bridge daemon for Antigravity 2.0"
readme = "../README.md"
license = { file = "../LICENSE" }
authors = [
    { name = "Saif Mukhtar", email = "saif@example.com" }
]
requires-python = ">=3.9"
dependencies = [
    "websockets>=11.0.0",
    "cryptography>=41.0.0",
    "qrcode>=7.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]

[project.scripts]
antimatter = "antimatter_bridge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["antimatter_bridge"]

[tool.hatch.build.targets.sdist]
include = [
    "antimatter_bridge",
]

[tool.hatch.build.targets.wheel.force-include]
"antimatter_bridge/assets" = "antimatter_bridge/assets"
