[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "antimatter-bridge"
version = "1.0.0"
description = "Antimatter Bridge — companion daemon for Google AntiGravity IDE"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Saif Mukhtar", email = "saifmukhtar@saifmukhtar.dev" }
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Topic :: Communications",
    "Intended Audience :: Developers",
    "Environment :: Console",
]
keywords = ["antigravity", "ai", "ide", "mobile", "bridge", "websocket", "android"]
dependencies = [
    "websockets>=11.0.0",
    "cryptography>=41.0.0",
    "qrcode>=7.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://saifmukhtar.dev"
Repository = "https://github.com/saifmukhtar/antimatter"
Issues = "https://github.com/saifmukhtar/antimatter/issues"
Documentation = "https://saifmukhtar.dev/docs/antimatter"
Changelog = "https://github.com/saifmukhtar/antimatter/releases"

[project.scripts]
antimatter = "antimatter_bridge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["antimatter_bridge"]

[tool.hatch.build.targets.sdist]
include = [
    "antimatter_bridge",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
