[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "antimatter-ag2"
version = "2.0.1"
description = "Antimatter adapter for AG2 (AutoGen) CLI framework"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Saif Mukhtar", email = "saifmukhtar@saifmukhtar.dev" }
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Topic :: Communications",
    "Intended Audience :: Developers",
    "Environment :: Console",
]
keywords = ["antigravity", "ai", "ide", "mobile", "bridge", "websocket", "android"]
dependencies = [
    "websockets==15.0.1",
    "google-antigravity==0.1.2",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://saifmukhtar.dev"
Repository = "https://github.com/saifmukhtar/antimatter"
Issues = "https://github.com/saifmukhtar/antimatter/issues"
Documentation = "https://saifmukhtar.dev/docs/antimatter"
Changelog = "https://github.com/saifmukhtar/antimatter/releases"

[project.scripts]
antimatter-ag2 = "antimatter_ag2.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["antimatter_ag2"]

[tool.hatch.build.targets.sdist]
include = [
    "antimatter_ag2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
