[project]
version = "2.0.5"
readme = "README.md"
name = "antimatter-gateway"
description = "Local edge gateway for the Antimatter ecosystem"
dependencies = [
    "websockets==15.0.1",
    "qrcode==8.2",
    "aiofiles==25.1.0",
    "ptyprocess==0.7.0",
    "pydantic>=2.0.0",
    "keyring>=24.0.0",
    "cryptography>=41.0.0",
    "base58>=2.1.1",
    "antimatter-shared-config",
    "antimatter-shared-crypto",
    "antimatter-shared-protocol",
    "antimatter-shared-fs"
]

[tool.uv.sources]
antimatter-shared-config = { workspace = true }
antimatter-shared-crypto = { workspace = true }
antimatter-shared-protocol = { workspace = true }
antimatter-shared-fs = { workspace = true }

[project.scripts]
antimatter-gateway = "antimatter_gateway.server:main"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
