[project]
version = "2.0.1"
readme = "README.md"
name = "antimatter-shared-fs"
description = "Filesystem shared protocol components for Antimatter"
dependencies = [
    "antimatter-shared-protocol"
]

[tool.uv.sources]
antimatter-shared-protocol = { workspace = true }


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
